Resolves: tdf#126773 Excel uses lowercase date and time format code keywords

... so do the same when exporting to prevent surprises with iOS
and OSX viewers or maybe other tools.

This made it necessary to adapt
ScExportTest::testExtendedLCIDXLSX() that checks calendar and date
relevant exported format strings.

Change-Id: I243d536e2a42562ec46375923facfa222ecbb29b
Reviewed-on: https://gerrit.libreoffice.org/80920
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins